# codex-hello-world

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  TASKS.md  pyproject.toml
.codex/instructions/: LOCAL_MODE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: codex-task.md
.github/workflows/: ci.yml
docs/: 00-overview.md  01-quickstart-web.md  02-task-template.md  03-issue-driven-tasks.md  04-ci-cd.md  05-agent-iteration-loop.md  06-read-only-mode.md  07-end-to-end-workflow.md  08-contributing-tour.md  09-discripper-workflow-case-study.md  10-ci-pragmatics-lessons.md  11-cli-ux-decisions.md  12-documentation-discipline.md
docs/issues/: p4-t1-coder.md  p4-t2-coder.md  p4-t3-coder.md  p4-t4-coder.md  p4-t5-coder.md  p4-t6-coder.md  p4-t7-coder.md
scripts/: test.sh
src/: hello.py
tests/: test_hello.py
